// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`contentSearch > renders with class correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-slot="content" class="sm:max-w-5xl" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0">contentSearch.title</h2><p id="akar-dialog-description-v-0-0-1">contentSearch.description</p></span>
  <!---->
  <div dir="ltr" data-slot="root">
    <div data-slot="root" class=""><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><span data-slot="trailing" class=""><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if--></button></span>
    </div>
    <div data-slot="content" class="" role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical">
      <div role="presentation" data-slot="viewport" class="">
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-2" data-slot="label" class="">Links</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-3" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-play" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Docs</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/components" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-4" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Components</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/templates" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-5" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Templates</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/showcase" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-6" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:presentation" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Showcase</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-7" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-7" data-slot="label" class="">Getting Started</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-8" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:house" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Introduction</span><span data-slot="itemLabelSuffix" class="">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</span></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Theme</div><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-10" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">System</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-11" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:sun" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Light</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-12" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:moon" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Dark</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button>
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;

exports[`contentSearch > renders with fullscreen correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0">contentSearch.title</h2><p id="akar-dialog-description-v-0-0-1">contentSearch.description</p></span>
  <!---->
  <div dir="ltr" data-slot="root">
    <div data-slot="root" class=""><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><span data-slot="trailing" class=""><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if--></button></span>
    </div>
    <div data-slot="content" class="" role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical">
      <div role="presentation" data-slot="viewport" class="">
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-2" data-slot="label" class="">Links</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-3" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-play" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Docs</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/components" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-4" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Components</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/templates" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-5" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Templates</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/showcase" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-6" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:presentation" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Showcase</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-7" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-7" data-slot="label" class="">Getting Started</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-8" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:house" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Introduction</span><span data-slot="itemLabelSuffix" class="">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</span></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Theme</div><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-10" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">System</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-11" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:sun" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Light</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-12" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:moon" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Dark</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button>
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;

exports[`contentSearch > renders with icon correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0">contentSearch.title</h2><p id="akar-dialog-description-v-0-0-1">contentSearch.description</p></span>
  <!---->
  <div dir="ltr" data-slot="root">
    <div data-slot="root" class=""><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value=""><span data-slot="leading" class=""><span class="iconify i-lucide:home" aria-hidden="true" data-slot="leadingIcon"></span></span><span data-slot="trailing" class=""><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if--></button></span>
    </div>
    <div data-slot="content" class="" role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical">
      <div role="presentation" data-slot="viewport" class="">
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-2" data-slot="label" class="">Links</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-3" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-play" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Docs</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/components" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-4" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Components</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/templates" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-5" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Templates</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/showcase" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-6" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:presentation" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Showcase</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-7" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-7" data-slot="label" class="">Getting Started</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-8" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:house" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Introduction</span><span data-slot="itemLabelSuffix" class="">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</span></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Theme</div><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-10" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">System</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-11" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:sun" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Light</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-12" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:moon" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Dark</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button>
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;

exports[`contentSearch > renders with links correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open" style="pointer-events: auto;"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0">contentSearch.title</h2><p id="akar-dialog-description-v-0-0-1">contentSearch.description</p></span>
  <!---->
  <div dir="ltr" data-slot="root">
    <div data-slot="root" class=""><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><span data-slot="trailing" class=""><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if--></button></span>
    </div>
    <div data-slot="content" class="" role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical">
      <div role="presentation" data-slot="viewport" class="">
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-2" data-slot="label" class="">Links</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-3" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-play" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Docs</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/components" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-4" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Components</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/templates" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-5" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Templates</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/showcase" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-6" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:presentation" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Showcase</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-7" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-7" data-slot="label" class="">Getting Started</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-8" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:house" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Introduction</span><span data-slot="itemLabelSuffix" class="">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</span></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Theme</div><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-10" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">System</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-11" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:sun" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Light</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-12" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:moon" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Dark</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button>
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;

exports[`contentSearch > renders with loading correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0">contentSearch.title</h2><p id="akar-dialog-description-v-0-0-1">contentSearch.description</p></span>
  <!---->
  <div dir="ltr" data-slot="root">
    <div data-slot="root" class=""><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value=""><span data-slot="leading" class=""><span class="iconify i-lucide:loader-circle" aria-hidden="true" data-slot="leadingIcon"></span></span><span data-slot="trailing" class=""><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if--></button></span>
    </div>
    <div data-slot="content" class="" role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical">
      <div role="presentation" data-slot="viewport" class="">
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-2" data-slot="label" class="">Links</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-3" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-play" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Docs</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/components" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-4" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Components</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/templates" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-5" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Templates</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/showcase" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-6" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:presentation" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Showcase</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-7" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-7" data-slot="label" class="">Getting Started</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-8" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:house" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Introduction</span><span data-slot="itemLabelSuffix" class="">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</span></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Theme</div><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-10" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">System</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-11" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:sun" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Light</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-12" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:moon" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Dark</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button>
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;

exports[`contentSearch > renders with loadingIcon correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0">contentSearch.title</h2><p id="akar-dialog-description-v-0-0-1">contentSearch.description</p></span>
  <!---->
  <div dir="ltr" data-slot="root">
    <div data-slot="root" class=""><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value=""><span data-slot="leading" class=""><span class="iconify i-lucide:loading" aria-hidden="true" data-slot="leadingIcon"></span></span><span data-slot="trailing" class=""><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if--></button></span>
    </div>
    <div data-slot="content" class="" role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical">
      <div role="presentation" data-slot="viewport" class="">
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-2" data-slot="label" class="">Links</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-3" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-play" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Docs</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/components" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-4" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Components</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/templates" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-5" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Templates</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/showcase" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-6" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:presentation" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Showcase</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-7" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-7" data-slot="label" class="">Getting Started</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-8" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:house" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Introduction</span><span data-slot="itemLabelSuffix" class="">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</span></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Theme</div><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-10" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">System</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-11" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:sun" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Light</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-12" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:moon" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Dark</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button>
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;

exports[`contentSearch > renders with placeholder correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0">contentSearch.title</h2><p id="akar-dialog-description-v-0-0-1">contentSearch.description</p></span>
  <!---->
  <div dir="ltr" data-slot="root">
    <div data-slot="root" class=""><input type="text" placeholder="Search" data-slot="input" autocomplete="off" aria-disabled="false" value=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><span data-slot="trailing" class=""><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if--></button></span>
    </div>
    <div data-slot="content" class="" role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical">
      <div role="presentation" data-slot="viewport" class="">
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-2" data-slot="label" class="">Links</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-3" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-play" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Docs</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/components" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-4" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Components</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/templates" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-5" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Templates</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/showcase" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-6" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:presentation" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Showcase</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-7" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-7" data-slot="label" class="">Getting Started</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-8" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:house" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Introduction</span><span data-slot="itemLabelSuffix" class="">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</span></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Theme</div><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-10" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">System</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-11" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:sun" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Light</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-12" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:moon" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Dark</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button>
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;

exports[`contentSearch > renders with size lg correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0">contentSearch.title</h2><p id="akar-dialog-description-v-0-0-1">contentSearch.description</p></span>
  <!---->
  <div dir="ltr" data-slot="root">
    <div data-slot="root" class=""><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><span data-slot="trailing" class=""><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if--></button></span>
    </div>
    <div data-slot="content" class="" role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical">
      <div role="presentation" data-slot="viewport" class="">
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-2" data-slot="label" class="">Links</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-3" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-play" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Docs</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/components" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-4" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Components</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/templates" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-5" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Templates</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/showcase" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-6" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:presentation" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Showcase</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-7" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-7" data-slot="label" class="">Getting Started</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-8" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:house" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Introduction</span><span data-slot="itemLabelSuffix" class="">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</span></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Theme</div><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-10" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">System</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-11" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:sun" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Light</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-12" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:moon" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Dark</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button>
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;

exports[`contentSearch > renders with size md correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0">contentSearch.title</h2><p id="akar-dialog-description-v-0-0-1">contentSearch.description</p></span>
  <!---->
  <div dir="ltr" data-slot="root">
    <div data-slot="root" class=""><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><span data-slot="trailing" class=""><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if--></button></span>
    </div>
    <div data-slot="content" class="" role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical">
      <div role="presentation" data-slot="viewport" class="">
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-2" data-slot="label" class="">Links</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-3" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-play" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Docs</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/components" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-4" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Components</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/templates" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-5" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Templates</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/showcase" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-6" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:presentation" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Showcase</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-7" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-7" data-slot="label" class="">Getting Started</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-8" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:house" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Introduction</span><span data-slot="itemLabelSuffix" class="">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</span></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Theme</div><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-10" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">System</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-11" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:sun" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Light</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-12" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:moon" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Dark</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button>
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;

exports[`contentSearch > renders with size sm correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0">contentSearch.title</h2><p id="akar-dialog-description-v-0-0-1">contentSearch.description</p></span>
  <!---->
  <div dir="ltr" data-slot="root">
    <div data-slot="root" class=""><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><span data-slot="trailing" class=""><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if--></button></span>
    </div>
    <div data-slot="content" class="" role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical">
      <div role="presentation" data-slot="viewport" class="">
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-2" data-slot="label" class="">Links</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-3" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-play" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Docs</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/components" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-4" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Components</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/templates" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-5" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Templates</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/showcase" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-6" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:presentation" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Showcase</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-7" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-7" data-slot="label" class="">Getting Started</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-8" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:house" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Introduction</span><span data-slot="itemLabelSuffix" class="">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</span></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Theme</div><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-10" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">System</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-11" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:sun" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Light</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-12" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:moon" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Dark</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button>
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;

exports[`contentSearch > renders with size xl correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0">contentSearch.title</h2><p id="akar-dialog-description-v-0-0-1">contentSearch.description</p></span>
  <!---->
  <div dir="ltr" data-slot="root">
    <div data-slot="root" class=""><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><span data-slot="trailing" class=""><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if--></button></span>
    </div>
    <div data-slot="content" class="" role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical">
      <div role="presentation" data-slot="viewport" class="">
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-2" data-slot="label" class="">Links</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-3" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-play" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Docs</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/components" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-4" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Components</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/templates" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-5" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Templates</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/showcase" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-6" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:presentation" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Showcase</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-7" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-7" data-slot="label" class="">Getting Started</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-8" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:house" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Introduction</span><span data-slot="itemLabelSuffix" class="">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</span></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Theme</div><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-10" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">System</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-11" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:sun" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Light</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-12" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:moon" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Dark</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button>
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;

exports[`contentSearch > renders with size xs correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0">contentSearch.title</h2><p id="akar-dialog-description-v-0-0-1">contentSearch.description</p></span>
  <!---->
  <div dir="ltr" data-slot="root">
    <div data-slot="root" class=""><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><span data-slot="trailing" class=""><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if--></button></span>
    </div>
    <div data-slot="content" class="" role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical">
      <div role="presentation" data-slot="viewport" class="">
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-2" data-slot="label" class="">Links</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-3" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-play" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Docs</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/components" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-4" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Components</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/templates" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-5" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Templates</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/showcase" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-6" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:presentation" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Showcase</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-7" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-7" data-slot="label" class="">Getting Started</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-8" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:house" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Introduction</span><span data-slot="itemLabelSuffix" class="">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</span></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Theme</div><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-10" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">System</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-11" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:sun" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Light</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-12" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:moon" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Dark</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button>
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;

exports[`contentSearch > renders with ui correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0">contentSearch.title</h2><p id="akar-dialog-description-v-0-0-1">contentSearch.description</p></span>
  <!---->
  <div dir="ltr" data-slot="root">
    <div data-slot="root" class="[&amp;>input]:text-lg"><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><span data-slot="trailing" class=""><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if--></button></span>
    </div>
    <div data-slot="content" class="" role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical">
      <div role="presentation" data-slot="viewport" class="">
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-2" data-slot="label" class="">Links</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-3" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-play" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Docs</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/components" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-4" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Components</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/templates" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-5" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Templates</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/showcase" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-6" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:presentation" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Showcase</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-7" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-7" data-slot="label" class="">Getting Started</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-8" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:house" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Introduction</span><span data-slot="itemLabelSuffix" class="">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</span></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-9" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-9" data-slot="label" class="">Theme</div><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-10" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">System</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-11" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:sun" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Light</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button><button type="button" data-akar-collection-item="" id="akar-listbox-item-v-0-0-12" role="option" tabindex="-1" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:moon" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Dark</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </button>
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;

exports[`contentSearch > renders without colorMode correctly 1`] = `
"<!--v-if-->
<!--teleport start-->




<div data-state="open" style="pointer-events: auto;" data-slot="overlay" class=""></div>
<div data-dismissable-layer="" style="pointer-events: auto;" tabindex="-1" data-slot="content" id="" role="dialog" aria-describedby="akar-dialog-description-v-0-0-1" aria-labelledby="akar-dialog-title-v-0-0-0" data-state="open"><span aria-hidden="true" style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0, 0, 0, 0); clip-path: inset(50%); white-space: nowrap; word-wrap: normal; top: -1px; left: -1px;"><h2 id="akar-dialog-title-v-0-0-0">contentSearch.title</h2><p id="akar-dialog-description-v-0-0-1">contentSearch.description</p></span>
  <!---->
  <div dir="ltr" data-slot="root">
    <div data-slot="root" class=""><input type="text" placeholder="Type a command or search…" data-slot="input" autocomplete="off" aria-disabled="false" value=""><span data-slot="leading" class=""><span class="iconify i-lucide:search" aria-hidden="true" data-slot="leadingIcon"></span></span><span data-slot="trailing" class=""><button type="button" aria-label="Close" data-slot="base" class=""><span class="iconify i-lucide:x" aria-hidden="true" data-slot="leadingIcon"></span>
      <!--v-if-->
      <!--v-if--></button></span>
    </div>
    <div data-slot="content" class="" role="listbox" tabindex="-1" aria-orientation="vertical" aria-multiselectable="false" data-orientation="vertical">
      <div role="presentation" data-slot="viewport" class="">
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-2" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-2" data-slot="label" class="">Links</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-3" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-play" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Docs</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/components" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-4" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:square-code" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Components</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/templates" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-5" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:monitor" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Templates</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a><a href="/showcase" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-6" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:presentation" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Showcase</span>
            <!--v-if--></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
        <div role="group" aria-labelledby="akar-listbox-group-v-0-0-7" data-slot="group" class="">
          <div id="akar-listbox-group-v-0-0-7" data-slot="label" class="">Getting Started</div><a href="/getting-started" role="option" tabindex="-1" data-akar-collection-item="" id="akar-listbox-item-v-0-0-8" aria-selected="false" data-state="unchecked" data-slot="item"><span class="iconify i-lucide:house" aria-hidden="true" data-slot="itemLeadingIcon"></span><span data-slot="itemWrapper" class=""><span data-slot="itemLabel" class=""><!--v-if--><span data-slot="itemLabelBase" class="">Introduction</span><span data-slot="itemLabelSuffix" class="">Pohon UI harnesses the combined strengths of Akar, UnoCSS, and UnoCss Variants to offer developers an unparalleled set of tools for creating sophisticated, accessible, and highly performant user interfaces.</span></span>
            <!--v-if--></span><span data-slot="itemTrailing" class=""><!--v-if--><!--v-if--></span>
          </a>
        </div>
      </div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</div>




<!--teleport end-->"
`;
